--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,33 @@
+absl-py==2.2.2
 aiofiles==23.2.1
 aiohappyeyeballs==2.6.1
-aiohttp==3.11.18
+aiohttp==3.11.16
 aiosignal==1.3.2
-allenact==0.5.4
+albucore==0.0.24
+albumentations==2.0.8
+allenact @ git+https://github.com/allenai/allenact.git@c5c51caa3a343f9438f675e8fef47f2bce05d713#subdirectory=allenact
 altair==5.5.0
 annotated-types==0.7.0
-antlr4-python3-runtime==4.9.3
+antlr4-python3-runtime==4.8
 anyio==3.7.1
 appdirs==1.4.4
-argon2-cffi
-argon2-cffi-bindings
-arrow
-asttokens
-async-lru
 async-timeout==5.0.1
 attrs==25.3.0
-babel
 beautifulsoup4==4.13.4
-bleach
 blinker==1.9.0
-Brotli
 cachetools==5.5.2
-cached-property
 certifi==2025.1.31
 cffi==1.17.1
 chardet==3.0.4
 charset-normalizer==3.4.1
 click==8.1.8
+-e git+https://github.com/penn-pal-lab/LIV.git@a12991f53aab01f3cecc1315a81068ba12e2bd6b#egg=clip&subdirectory=liv/models/clip
 cloudpickle==1.6.0
 cmake==4.0.0
-comm
-contourpy==1.3.1
+contourpy==1.3.0
 cycler==0.12.1
 Cython==0.29.37
-debugpy
 decorator==4.4.2
-defusedxml
 decord==0.6.0
 deep-translator==1.11.4
 distro==1.9.0
@@ -43,26 +35,24 @@ dm-control==1.0.11
 dm-env==1.6
 dm-tree==0.1.8
 docker-pycreds==0.4.0
+-e git+https://github.com/opendatalab/DocLayout-YOLO.git@32a8ec276b3d79bf40561c4bc4b8e21ef32ac6fd#egg=doclayout_yolo
 easyocr==1.7.2
 einops==0.6.0
 etils==1.5.2
 eval_type_backport==0.2.2
 exceptiongroup==1.2.2
-executing
 Farama-Notifications==0.0.4
 fastapi==0.115.12
 fasteners==0.19
-fastjsonschema
 ffmpy==0.5.0
 filelock==3.18.0
 flatten-dict==0.4.2
 fonttools==4.57.0
-fqdn
-frozenlist==1.6.0
+frozenlist==1.5.0
 fsspec==2025.3.2
 ftfy==6.3.1
 future==1.0.0
-gdown==4.4.0
+gdown==4.7.1
 gitdb==4.0.12
 GitPython==3.1.44
 glfw==2.8.0
@@ -87,7 +77,7 @@ httpcore==1.0.9
 httplib2==0.22.0
 httpx==0.28.1
 huggingface-hub==0.30.2
-hydra-core==1.3.2
+hydra-core==1.1.1
 hyperframe==5.2.0
 idna==2.10
 ImageHash==4.3.2
@@ -95,43 +85,27 @@ imageio==2.37.0
 imageio-ffmpeg==0.6.0
 importlib_metadata==8.6.1
 importlib_resources==6.5.2
-iopath==0.1.10
-ipykernel
-ipython
 isodate==0.7.2
-isoduration
 Jinja2==3.1.6
-jedi
 jiter==0.9.0
 joblib==1.4.2
-json5
-jsonlines
-jsonpointer
+jsonlines==4.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2025.4.1
-jupyter-events
-jupyter-lsp
-jupyter_client
-jupyter_core
-jupyter_server
-jupyter_server_terminals
-jupyterlab
-jupyterlab_pygments
-jupyterlab_server
-kiwisolver==1.4.8
+kiwisolver==1.4.7
 labmaze==1.0.6
 langdetect==1.0.9
 lazy_loader==0.4
+Levenshtein==0.27.1
 lightning-utilities==0.14.3
 lit==18.1.8
+-e git+https://github.com/penn-pal-lab/LIV.git@a12991f53aab01f3cecc1315a81068ba12e2bd6b#egg=liv
 llvmlite==0.43.0
 lxml==5.3.2
 markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.10.1
-matplotlib-inline
+MarkupSafe==2.1.5
+matplotlib==3.9.4
 mdurl==0.1.2
-mistune
 more-itertools==10.6.0
 moviepy==1.0.3
 mpmath==1.3.0
@@ -139,67 +113,52 @@ mujoco==3.3.1
 mujoco-py==2.1.2.14
 multidict==6.4.3
 narwhals==1.36.0
-nbclient
-nbconvert
-nbformat
-nest_asyncio
-networkx==3.4.2
+networkx==3.2.1
 ninja==1.11.1.4
-notebook
-notebook_shim
 numba==0.60.0
-numpy==2.2.4
+numpy==1.26.4
 nvidia-cublas-cu11==11.10.3.66
-nvidia-cublas-cu12==12.4.5.8
+nvidia-cublas-cu12==12.6.4.1
 nvidia-cuda-cupti-cu11==11.7.101
-nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-cupti-cu12==12.6.80
 nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.6.77
 nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.6.77
 nvidia-cudnn-cu11==8.5.0.96
-nvidia-cudnn-cu12==9.1.0.70
+nvidia-cudnn-cu12==9.5.1.17
 nvidia-cufft-cu11==10.9.0.58
-nvidia-cufft-cu12==11.2.1.3
+nvidia-cufft-cu12==11.3.0.4
+nvidia-cufile-cu12==1.11.1.6
 nvidia-curand-cu11==10.2.10.91
-nvidia-curand-cu12==10.3.5.147
+nvidia-curand-cu12==10.3.7.77
 nvidia-cusolver-cu11==11.4.0.1
-nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusolver-cu12==11.7.1.2
 nvidia-cusparse-cu11==11.7.4.91
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-cusparselt-cu12==0.6.2
+nvidia-cusparse-cu12==12.5.4.2
+nvidia-cusparselt-cu12==0.6.3
 nvidia-nccl-cu11==2.14.3
-nvidia-nccl-cu12==2.21.5
-nvidia-nvjitlink-cu12==12.4.127
+nvidia-nccl-cu12==2.26.2
+nvidia-nvjitlink-cu12==12.6.85
 nvidia-nvtx-cu11==11.7.91
-nvidia-nvtx-cu12==12.4.127
-omegaconf==2.3.0
+nvidia-nvtx-cu12==12.6.77
+omegaconf==2.1.1
 openai==1.76.0
 openai-whisper==20240930
 opencv-python==4.11.0.86
 opencv-python-headless==4.11.0.86
 orjson==3.10.16
-overrides
 packaging==24.2
 pandas==2.2.3
-pandocfilters
-parso
 pathtools==0.1.2
-pexpect
-pickleshare
-Pillow==11.1.0
-pkgutil_resolve_name
+pillow==11.2.1
 platformdirs==4.3.7
-portalocker==3.1.1
 proglog==0.1.11
-prometheus_client
-prompt_toolkit
 propcache==0.3.1
 proto-plus==1.26.1
-protobuf==5.29.4
+protobuf==4.25.8
 psutil==7.0.0
-ptyprocess
-pure_eval
+py-cpuinfo==9.0.0
 pyarrow==19.0.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
@@ -216,83 +175,72 @@ pyparsing==3.2.3
 PySocks==1.7.1
 python-bidi==0.6.6
 python-dateutil==2.9.0.post0
-python-json-logger
+python-Levenshtein==0.27.1
 python-multipart==0.0.20
 pytorch-lightning==2.0.0
 pytz==2025.2
 PyWavelets==1.6.0
 PyYAML==6.0.2
-pyzmq
+RapidFuzz==3.13.0
 referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
-rfc3339_validator
 rfc3986==1.5.0
-rfc3986-validator
 rich==14.0.0
 rpds-py==0.24.0
 rsa==4.9
 ruff==0.11.5
-sam2==1.1.0
 scikit-image==0.24.0
 scikit-learn==1.6.1
 scikit-video==1.1.11
 scipy==1.13.1
+seaborn==0.13.2
 semantic-version==2.10.0
-Send2Trash
 sentry-sdk==2.26.1
 setproctitle==1.3.5
 shapely==2.0.7
 shellingham==1.5.4
 Shimmy==0.2.0
+simsimd==6.2.1
 six==1.17.0
+sk-video==1.1.10
 smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.7
-stack_data
 starlette==0.46.2
 streamlit==1.44.1
-sympy==1.13.1
+stringzilla==3.12.5
+sympy==1.14.0
 tabulate==0.9.0
 tenacity==9.1.2
 tensorboardX==2.6.2.2
 termcolor==3.0.1
-terminado
+thop==0.1.1.post2209072238
 threadpoolctl==3.6.0
 tifffile==2024.8.30
 tiktoken==0.9.0
-tinycss2
 toml==0.10.2
-tomli
 tomlkit==0.12.0
-torch==2.6.0
+torch==2.7.0
 torchmetrics==1.7.1
-torchvision==0.21.0
+torchvision==0.22.0
 tornado==6.4.2
 tqdm==4.67.1
-traitlets
 transforms3d==0.4.2
-triton==3.2.0
-types-python-dateutil
+triton==3.3.0
 typer==0.15.2
 typing-inspection==0.4.0
 typing_extensions==4.13.2
-typing_utils
 tzdata==2025.2
-uri-template
 uritemplate==4.1.1
 urllib3==2.4.0
 uvicorn==0.34.1
-wandb==0.19.9
+wandb==0.16.0
 watchdog==6.0.0
 wcwidth==0.2.13
-webcolors
-webencodings
-websocket-client
 websockets==11.0.3
 webvtt-py==0.5.1
-yarl==1.20.0
+yarl==1.19.0
 youtube-dl==2021.12.17
 yt-dlp==2025.3.31
 zipp==3.21.0
-zstandard
